--- a/style.css
+++ b/style.css
@@ -403,7 +403,7 @@ body {
   font-size: 4.9em; }
 
 .scale-stretched #pluto .planet {
-  font-size: 1.9em; }
+  font-size: 3.9em; }
 /* --------------------------------------------------------------------------- scaled sizes */
 /*
 (planets radius * 2) * ratio
@@ -591,7 +591,7 @@ body {
   width: 275.64709em;
   height: 275.64709em;
   margin-top: -137.82355em;
-  margin-left: -1.82355em; }
+  margin-left: -137.82355em; }
 
 /* Moon */
 .scale-d #earth .orbit {
@@ -1018,9 +1018,7 @@ body {
 
 /* --------------------------------------------------------------------------- saturn ring */
 /*
-
 #saturn .ring           { animation-name:     shadow-saturn-ring; }
-
 @keyframes
 shadow-saturn-ring{ 0%   { box-shadow: inset -16px  0      4px   rgba(20, 40, 50, 0.45); opacity: .4; }
                   25%    { box-shadow: inset -5px   -30px   12px  rgba(20, 40, 50, 0.3);  opacity: 1; }
@@ -1029,10 +1027,8 @@ shadow-saturn-ring{ 0%   { box-shadow: inset -16px  0      4px   rgba(20, 40, 50
                   75%    { box-shadow: inset 0      30px  50px  rgba(20, 40, 50, 0);  opacity: .3; }
                   100%   { box-shadow: inset -16px  0      4px   rgba(20, 40, 50, 0.45);  opacity: .4; }
                 }
-
 .scaled.view-2D #saturn .ring,
 .scaled.view-3D #saturn .ring { box-shadow: inset 16px   0      4px   rgba(20, 40, 50, 0.6); }
-
 */
 /* --------------------------------------------------------------------------- uranus ; pos: Left */
 #uranus .pos {
@@ -1149,7 +1145,6 @@ shadow-saturn-ring{ 0%   { box-shadow: inset -16px  0      4px   rgba(20, 40, 50
 .planet,
 .orbit,
 .ring { animation-duration: 20s!important; }
-
 /* */
 /* --------------------------------------------------------------------------- navigation styles */
 dl.infos {
@@ -1534,10 +1529,12 @@ h1 {
 @media screen and (min-width: 500px) {
   #universe {
     font-size: 36%; } }
-@media screen and (min-width: 900px) {
+@media screen and (min-width: 600px) {
   #universe {
-    font-size: 75%; } }
-
+    font-size: 44%; } }
+@media screen and (min-width: 1000px) {
+  #universe {
+    font-size: 80%; } }
 
   #navbar, #controls, #data {
     background: transparent; }
