--- a/style.css
+++ b/style.css
@@ -1694,12 +1694,14 @@ h1 {
   border-radius: 3px 0 0 3px;
 }
 
-
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+}
 
 #mySidenav a {
   position: absolute;
   left: -80px;
-  
+  transition: 0.3s;
   padding: 15px;
   width: 100px;
   text-decoration: none;
