--- a/style.css
+++ b/style.css
@@ -1699,8 +1699,8 @@ h1 {
 }
 
 #mySidenav a {
+  left:-80px;
   position: absolute;
-  left: 0px;
   transition: 0.3s;
   padding: 15px;
   width: 100px;
@@ -1710,6 +1710,10 @@ h1 {
   font-weight: bold;
   border-radius: 0 5px 5px 0;
   display: block;
+}
+
+#mySidenav a:hover{
+  left: 0;
 }
 
 #back {
